src/objects/Address_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Assignment_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Address Assignment Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address_Assignment_Number__c</fullName>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Address Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Address_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address ID</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Address Assignments (Address ID)</relationshipLabel>
        <relationshipName>Address_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address Assignments (Contact ID)</relationshipLabel>
        <relationshipName>Address_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_From_Date__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <formula>Address__r.Block_House_Number__c &amp; &apos; &apos; 
&amp; Address__r.Street_Name__c &amp; &apos; &apos;
&amp;&quot;#&quot; 
&amp;( Address__r.Level_Number__c) &amp; &quot;-&quot; &amp; Address__r.Unit_Number__c &amp; &apos; &apos;
&amp; Address__r.Building_Name__c &amp; &apos; &apos;
&amp; Address__r.Postal_Code__r.SingPost_Building_Code__c &amp; &apos; &apos;
&amp; Address__r.Postal_Code__r.Name &amp; &apos; &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription History</label>
        <referenceTo>Subscription_History__c</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription (Vendor)</label>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription ID</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Accounts</description>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address Assignments</relationshipLabel>
        <relationshipName>Address_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>old_address__c</fullName>
        <label>Old Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Assignment</label>
    <nameField>
        <displayFormat>Address_Assign-{0000}</displayFormat>
        <label>Address Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_Address_Assign_1</fullName>
        <active>true</active>
        <description>Past date and End date less than the Effective date is not be allowed.</description>
        <errorConditionFormula>(  End_Date__c  &lt;  Effective_Date__c   )  ||  (End_Date__c  &lt; TODAY ())</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be greater than the Effective date and must not be a past date.</errorMessage>
    </validationRules>
</CustomObject>